// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders Checked 1`] = `
<label
  className="sc-jNUliw kFdGcT"
>
  <input
    checked={true}
    className="sc-dauhQT kJOprB"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-fWOSwS euEMqj"
  >
    <span
      className="sc-cpgxJx kSytY"
    >
      <div
        checked={true}
        className="sc-flBipw fstKDX"
      />
    </span>
    <p
      className="sc-hFbbzE wiWBY"
      size={14}
    >
      Checkbox with checked state by default
    </p>
  </div>
</label>
`;

exports[`Checkbox renders Disabled 1`] = `
<label
  className="sc-jNUliw kFdGcT"
>
  <input
    className="sc-dauhQT kJOprB"
    disabled={true}
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-fWOSwS euEMqj"
  >
    <span
      className="sc-cpgxJx kSytY"
    >
      <div
        checked={false}
        className="sc-flBipw bdNVgS"
      />
    </span>
    <p
      className="sc-hFbbzE wiWBY"
      size={14}
    >
      Disabled Checkbox
    </p>
  </div>
</label>
`;

exports[`Checkbox renders No label 1`] = `
<label
  className="sc-jNUliw kFdGcT"
>
  <input
    className="sc-dauhQT kJOprB"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-fWOSwS euEMqj"
  >
    <span
      className="sc-cpgxJx kSytY"
    >
      <div
        checked={false}
        className="sc-flBipw bdNVgS"
      />
    </span>
  </div>
</label>
`;

exports[`Checkbox renders Read only 1`] = `
<label
  className="sc-jNUliw kFdGcT"
>
  <input
    className="sc-dauhQT kJOprB"
    onClick={[Function]}
    readOnly={true}
    type="checkbox"
  />
  <div
    className="sc-fWOSwS euEMqj"
  >
    <span
      className="sc-cpgxJx kSytY"
    >
      <div
        checked={false}
        className="sc-flBipw bdNVgS"
      />
    </span>
    <p
      className="sc-hFbbzE wiWBY"
      size={14}
    >
      Readonly checkbox
    </p>
  </div>
</label>
`;

exports[`Checkbox renders default 1`] = `
<label
  className="sc-jNUliw kFdGcT"
>
  <input
    className="sc-dauhQT kJOprB"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-fWOSwS euEMqj"
  >
    <span
      className="sc-cpgxJx kSytY"
    >
      <div
        checked={false}
        className="sc-flBipw bdNVgS"
      />
    </span>
    <p
      className="sc-hFbbzE wiWBY"
      size={14}
    >
      Default Checkbox
    </p>
  </div>
</label>
`;
